--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,15 +1626,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-tdI0fY58fG {
+.cid-tdTzP7Bbo0 {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background: #ffffff;
 }
-.cid-tdI0fY58fG .mbr-fallback-image.disabled {
+.cid-tdTzP7Bbo0 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tdI0fY58fG .mbr-fallback-image {
+.cid-tdTzP7Bbo0 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1643,15 +1643,23 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-tdI0fY58fG .google-map {
-  height: 30rem;
+@media (max-width: 767px) {
+  .cid-tdTzP7Bbo0 .row {
+    flex-direction: column-reverse;
+  }
+  .cid-tdTzP7Bbo0 .row .map-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tdTzP7Bbo0 .google-map {
+  height: 100%;
   position: relative;
 }
-.cid-tdI0fY58fG .google-map iframe {
+.cid-tdTzP7Bbo0 .google-map iframe {
   height: 100%;
   width: 100%;
 }
-.cid-tdI0fY58fG .google-map [data-state-details] {
+.cid-tdTzP7Bbo0 .google-map [data-state-details] {
   color: #6b6763;
   height: 1.5em;
   margin-top: -0.75em;
@@ -1662,11 +1670,38 @@ a {
   top: 50%;
   width: 100%;
 }
-.cid-tdI0fY58fG .google-map[data-state] {
+.cid-tdTzP7Bbo0 .google-map[data-state] {
   background: #e9e5dc;
 }
-.cid-tdI0fY58fG .google-map[data-state="loading"] [data-state-details] {
+.cid-tdTzP7Bbo0 .google-map[data-state="loading"] [data-state-details] {
   display: none;
+}
+.cid-tdTzP7Bbo0 .image-wrapper {
+  display: flex;
+  align-items: center;
+}
+.cid-tdTzP7Bbo0 .card-wrapper {
+  display: flex;
+  border-radius: 4px;
+  background: #fafafa;
+}
+.cid-tdTzP7Bbo0 .card-wrapper:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+@media (max-width: 991px) {
+  .cid-tdTzP7Bbo0 .card-wrapper {
+    padding: 1rem 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-tdTzP7Bbo0 .card-wrapper {
+    padding: 2rem 4rem;
+  }
+}
+.cid-tdTzP7Bbo0 .mbr-iconfont {
+  font-size: 2rem;
+  padding-right: 1.5rem;
+  color: #6592e6;
 }
 .cid-tdH0uuYaSc {
   padding-top: 2rem;
