--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2199,7 +2199,7 @@ a {
   padding-right: 0;
 }
 .cid-tdIa28grd2 .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-tdIa28grd2 .item-wrapper img {
@@ -2981,7 +2981,7 @@ a {
   padding-right: 0;
 }
 .cid-tdIam2i3Sk .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-tdIam2i3Sk .item-wrapper img {
@@ -3766,7 +3766,7 @@ a {
   padding-right: 0;
 }
 .cid-tdIaLpy2cB .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-tdIaLpy2cB .item-wrapper img {
@@ -4548,7 +4548,7 @@ a {
   padding-right: 0;
 }
 .cid-tdI9pqpzyU .item-wrapper {
-  height: 100%;
+  height: 300px;
   position: relative;
 }
 .cid-tdI9pqpzyU .item-wrapper img {
